@@ -1,4 +1,5 @@
 0.03
+ - Update Module::Install to 1.16 version.
 
 0.02 2014-12-06T18:06:55+01:00
  - Add Error::Pure::Utils to dependencies.
